# NingyovExample

./: .gitattributes  CMakeLists.txt  README.md  config.txt
images/: background.xcf  dialog_box.xcf
images/stand01_0a/: STAND01_0A.POS  STAND01_0A.xcf  STAND01_0A_01_E0.xcf  STAND01_0A_01_M0.xcf
src/: ExampleCharacterScene.cpp  ExampleDialogScene.cpp  ExampleDialogTextScene.cpp  ExampleMultiShotScene.cpp  ExampleSimpleScene.cpp
